src/interpreter/snapshots/rlox__interpreter__tests__interpreter@assignments__associativity.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/assignments/associativity.lox
---
c
c
c
