src/interpreter/snapshots/rlox__interpreter__tests__interpreter@assignments__grouping.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/assignments/grouping.lox
---
Syntax error(s):
[ line 2 ] : Invalid assignment target.
