src/interpreter/snapshots/rlox__interpreter__tests__interpreter@assignments__infix_operator.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/assignments/infix_operator.lox
---
Syntax error(s):
[ line 3 ] : Invalid assignment target.
