src/interpreter/snapshots/rlox__interpreter__tests__interpreter@assignments__local.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/assignments/local.lox
---
before
after
arg
arg
