src/interpreter/snapshots/rlox__interpreter__tests__interpreter@assignments__prefix_operator.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/assignments/prefix_operator.lox
---
Syntax error(s):
[ line 2 ] : Invalid assignment target.
