src/interpreter/snapshots/rlox__interpreter__tests__interpreter@assignments__syntax.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/assignments/syntax.lox
---
var
var
