src/interpreter/snapshots/rlox__interpreter__tests__interpreter@assignments__undefined.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/assignments/undefined.lox
---
Runtime error: [ line 1 ] : Undefined variable 'unknown'.
